--- a/src/Components/deals.css
+++ b/src/Components/deals.css
@@ -1,7 +1,6 @@
 .Deals {
-  position: relative;
-  top: 160px;
   background-color: #f6f5f5;
+  padding-top: 20px;
 }
 
 .deals-header {
@@ -172,8 +171,5 @@
 @media (max-width: 420px) {
   .deals-head {
     font-size: 20px;
-  }
-  .Deals {
-    top: 125px;
   }
 }
